Fix list group alignment

--- a/web/html/src/branding/css/susemanager/components/panels.less
+++ b/web/html/src/branding/css/susemanager/components/panels.less
@@ -34,6 +34,10 @@
       padding: 1.25rem;
     }
 
+    .list-group:last-child {
+      margin-bottom: 0;
+    }
+
     .list-group-item {
       background: transparent;
       border-color: @eos-bc-gray-100;
